Reader: Fix overlapping rec sites in IE

--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -54,7 +54,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 .reader-recommended-sites__site-list-item {
 	display: flex;
-	flex: 1;
+	flex: 1 1 0;
 	flex-direction: column;
 	list-style-type: none;
 	margin-top: -40px;
@@ -81,7 +81,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 
 	> :nth-child(2) {
-		flex: 1;
+		flex: 1 1 0;
 	}
 
 	.reader-recommended-sites__recommended-site-dismiss {
